widget/angular/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: widget-service
  namespace: widget-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: widget-app
