widget/angular/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-res
  namespace: widget-app
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: widget.elevok.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: widget-service
            port:
              number: 80
